--- a/frontend/src/assets/scss/md/_variables.scss
+++ b/frontend/src/assets/scss/md/_variables.scss
@@ -25,7 +25,7 @@ $white-transparent: rgba($white-color, .8);
 
 $gray-color:  #999999 !default;
 
-$brand-primary: $purple !default;
+$brand-primary:#00C9AD !default;
 $brand-success: $green !default;
 $brand-danger: $red !default;
 $brand-warning: $orange !default;
