--- a/frontend/src/assets/scss/md/_colors.scss
+++ b/frontend/src/assets/scss/md/_colors.scss
@@ -5,7 +5,7 @@
   ));
 
 @include md-register-theme("default", (
-  primary: md-get-palette-color(purple, 500), // The primary color of your application
+  primary: md-get-palette-color(cyan, 400) // The primary color of your application
 ));
 
 
